fix(wap_plugin): support ws server_url when building temp file URLs